--- a/DeliveryCompany/DeliveryCompany/Views/Deliveries/Index.cshtml
+++ b/DeliveryCompany/DeliveryCompany/Views/Deliveries/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@using DeliveryCompany.Models.ViewModels
+﻿@using Constants.Authentification
+@using DeliveryCompany.Models.ViewModels
 @using DeliveryCompany.Services.IServices
 @using DeliveryCompany.Utility.Enums
 @using Services.IServices
@@ -15,7 +16,13 @@
         <div class="col-6">
             <div class="row">
                 <h2 class="text-primary">
-                    Deliveries List
+                    Deliveries List @if (User.IsInRole(UserRoles.Admin))
+                    {
+                        <h2 class="text-warning">
+                            (Admin)
+                        </h2>
+
+                    }
                 </h2>
             </div>
         </div>
@@ -138,7 +145,12 @@
                                                     <td>
                                                         @if (order.OrderStatus == OrderStatus.InTransit)
                                                         {
-                                                            <i class="bi bi-truck text-success delivery-icon" data-id="@order.OrderId" data-status="@OrderStatus.Delivered" style="cursor: pointer; font-size: 2em;"></i>
+                                                            if (obj.DeliveryCarOrder.DeliveryStatus != DeliveryStatusEnum.Finished)
+                                                            {
+                                                                <i class="bi bi-truck text-success delivery-icon" data-id="@order.OrderId" data-status="@OrderStatus.Delivered" style="cursor: pointer; font-size: 2em;"></i>
+                                                            }else{
+                                                                <i class="bi bi-truck" style="font-size: 2em;"></i>
+                                                            }
                                                         }
                                                         else if (order.OrderStatus == OrderStatus.Delivered)
                                                         {
